# Jurivoc

./: .gitignore  JurivocData.py  README.md  convert_data_graph.py  convert_data_jurivoc.py  convert_data_skos.py  jurivoc.trig  notmatch.csv  pyproject.toml  requirements.txt
Log/: concepts_graph.csv  dbLanguage.csv  jurivoc_fre.csv  jurivoc_ger.csv  jurivoc_ger_graph.csv  jurivoc_ita.csv  jurivoc_ita_graph.csv  jurivoc_with_label_uris.ttl  usa_and_graph.csv
Log/data_for_graph/: Merge_GraphNew_OldGraph.csv  Merge_GraphNew_authoritativeLabel.csv  terms_not_identifier.csv  thesaurus_graph.csv  usa_and_graph.csv
bkp/: convert_data_graph.py  convert_data_jurivoc.py
graphResult_small_v2/: jurivoc.ttl
inputs/: jurivoc_fre.txt  jurivoc_fre_ger.txt  jurivoc_fre_ita.txt  jurivoc_ger.txt  jurivoc_ita.txt
inputs_small/: jurivoc_fre.txt  jurivoc_fre_ger.txt  jurivoc_fre_ita.txt  jurivoc_ger.txt  jurivoc_ita.txt
inputs_small_v2/: jurivoc_fre.txt  jurivoc_fre_ger.txt  jurivoc_fre_ita.txt  jurivoc_ger.txt  jurivoc_ita.txt
