[tool.poetry]
name = "jurivoc"
version = "0.1.0"
description = "Convert all files txt to triples graph"
authors = ["Sparna"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
rdflib = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
